# lstm-classical-music-generator

./: .gitignore  CMakeLists.txt  README.md
models/bach/: bach_vocab.json
models/bach/midi/: Air in D Major.mid  BWV 1006a - Prélude.mid  Das Wohltemperierte Clavier I, Praeludium II.mid
models/chopin/: chopin_vocab.json
models/chopin/15/: chopin_15.json
models/chopin/midi/: Etude Op 10 no 12.mid  Nocturne Op 9, No 2.mid
models/mozart/: mozart_vocab.json
models/mozart/midi/: Elvira Madigan.mid  Les Echos.mid  Piano Concerto No 2, Theme.mid  Romance No 20.mid  Sonate Opus KV 331 - Tema.mid  Symphony No 40.mid  Turkish March.mid
output/: out_mozart_100.mid
python/: LSTM_music_generator.ipynb
python/datasets/bach_midi/test/: Badinerie.mid  Loure 2.mid
python/datasets/chopin_midi/test/: Fantaisie-Impromptu.mid  Marche Funebre.mid  Minute Waltz.mid
python/datasets/mozart_midi/test/: Menuett by WAMozart_1.mid  Minuet from Don Juan_1.mid
src/: ChordDetectTest.cpp  ChordDetector.cpp  ChordDetector.h  MainGui.cpp  MainGui.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
